--- a/components/go-enpxscoe/overlays/prod/deployment-patch.yaml
+++ b/components/go-enpxscoe/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
+      - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/go-enpxscoe:github-d2ebd808c44c683aa4d58703f1a6a1d147894d1e
         name: container-image  
